# lobedo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build_web.ps1  current_system.md  headless_plan.json  lobedo_backlog.md  lobedo_project_plan.md  project_directory.md
crates/app/: Cargo.toml  index.html
crates/app/src/: app.rs  headless.rs  lib.rs  main.rs
crates/app/src/app/: eval.rs  io.rs  logging.rs  node_info.rs  spreadsheet.rs  ui.rs  ui_central.rs  ui_info_panels.rs  ui_inputs.rs  ui_preferences.rs  ui_side_panels.rs  ui_top_bar.rs  undo.rs  viewport.rs  viewport_tools.rs  wrangle_help.rs
crates/app/src/node_graph/: help.rs  help_pages.rs  help_pages_io.rs  help_pages_splats.rs  help_pages_volumes.rs  menu.rs  mod.rs  params.rs  state.rs  state_inspector.rs  state_interaction.rs  state_layout.rs  state_menus.rs  utils.rs  viewer.rs
crates/core/: Cargo.toml
crates/core/src/: assets.rs  attributes.rs  color.rs  curve.rs  eval.rs  geometry.rs  geometry_eval.rs  gltf_io.rs  gradient.rs  graph.rs  groups.rs  lib.rs  material.rs  mesh.rs  mesh_eval.rs  mesh_primitives.rs  node_help.rs  node_help_io.rs  node_help_splats.rs  node_help_volumes.rs  nodes_builtin.rs  noise.rs  parallel.rs  param_spec.rs  param_templates.rs  progress.rs  project.rs  scene.rs  splat.rs  splat_eval.rs  splat_ply.rs  volume.rs  volume_sampling.rs  wrangle.rs
crates/core/src/nodes/: attribute_expand.rs  attribute_from_feature.rs  attribute_from_volume.rs  attribute_math.rs  attribute_noise.rs  attribute_promote.rs  attribute_transfer.rs  attribute_utils.rs  boolean.rs  boolean_geo.rs  box_node.rs  circle.rs  color.rs  copy_to_points.rs  copy_transform.rs  curve.rs  delete.rs  erosion_noise.rs  expand_utils.rs  ffd.rs  file.rs  fuse.rs  gltf_output.rs  grid.rs  group.rs  group_expand.rs  group_utils.rs  material.rs  merge.rs  mod.rs  noise.rs  (+37 more)
(+53 files in other folders)
