[package]
name = "lobedo"
version = "0.1.0"
edition = "2021"

[lib]
name = "lobedo_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
lobedo_core = { package = "core", path = "../core" }
render = { path = "../render" }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.33"
egui-snarl = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde_json = "1"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Document", "HtmlCanvasElement", "Window"] }
web-time = "1"
