[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.27"
tracing = "0.1"
tobj = "4"
mcubes = "0.1.7"
lin_alg = "1.3.5"
gltf = "1.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"
