[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.27"
tracing = "0.1"
tobj = "4"
mcubes = "0.1.7"
lin_alg = "1.3.5"
gltf = "1.4"
boolmesh = { version = "0.1.3", features = ["f32"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"
ureq = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Response"] }
